# brain-less-model-exposition

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  pyproject.toml  requirements.txt  test.http  transformer.py
.github/workflows/: docker-publish.yml
generic_pytorch_model/: generic_pytorch_model.py  main.py
