[tool.poetry]
name = "generic-pytorch-model"
version = "0.1.0"
description = ""
authors = ["none <none>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
torch = {version = "^2.4.0+cpu", source = "pytorch"}
numpy = "^2.1.1"
uvicorn = {extras = ["standard"], version = "^0.30.6"}

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"